Implemented colorbox for my team

--- a/app/views/draft/_draft_player_list.html.erb
+++ b/app/views/draft/_draft_player_list.html.erb
@@ -5,7 +5,7 @@
 
 <div class="left_container">
   <% if !session[:mm_team_id].nil? %>
-    <%= link_to 'My Team', "#", :onClick => "getRoster(#{session[:mm_team_id]})" %>
+    <%= link_to 'My Team', "#", :data => { :team => session[:mm_team_id] }, :id => "my_team" %>
   <% end %>
 </div>
 
