--- a/app/views/draft/get_current_draft_status.js.erb
+++ b/app/views/draft/get_current_draft_status.js.erb
@@ -6,6 +6,7 @@ $("#notice").hide();
 $("#alert").hide();
 
 deleteRow('draft_players_table')
+deleteRow('preferred_players_table')
 
 // alert($("#player_selected_round").val());
 // alert($("#current_round").html());
