--- a/app/views/draft/index.html.erb
+++ b/app/views/draft/index.html.erb
@@ -14,10 +14,16 @@
 </div>
 
 <div class="right_container">
-
+    <% if !session[:mm_team_id].nil? %>
+        <%= link_to 'My Team', "#", :data => { :team => session[:mm_team_id] }, :id => "my_team" %>
+    <% end %>
   <div id="draft_players_container">
     <%= render "draft_player_list" %>
   </div>
+
+  <div id="preferred_players_container" style="display: none;">
+    <%= render "preferred_player_list" %>
+</div>
 
 </div>
 
