--- a/app/views/draft/_preferred_player_list.html.erb
+++ b/app/views/draft/_preferred_player_list.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
-    Filter players allowed to be drafted for:
-    <%= select(:player, :selected_round, options_for_select([['Round 1 & 2', 1], ['Round 3', 3], ['Round 4', 4], ['Round 5', 5], ['Round 6', 6]], @selected_round), {}, html_options = {:onchange => "getEligiblePlayersByRound()"})  %>
+  Filter players allowed to be drafted for:
+  <%= select(:preferred_player, :selected_round, options_for_select([['Round 1 & 2', 1], ['Round 3', 3], ['Round 4', 4], ['Round 5', 5], ['Round 6', 6]], @selected_round), {}, html_options = {:onchange => "getPreferredPlayersByRound()"})  %>
   <% if controller.action_name != 'preferred_players' %>
-    <%= link_to 'Show Preferred Players', '#', :onclick => "$('#draft_players_container').hide(); $('#preferred_players_container').show();" %>
+    <%= link_to 'Show All Players', '#', :onclick => "$('#preferred_players_container').hide(); $('#draft_players_container').show();" %>
   <% end %>
 </div>
 
 <div class="clear"></div>
 
-<div id="draft_players_container_header">NCAA Players</div>
+<div id="preferred_players_container_header">My Preferred Players</div>
 
 <div>
   <b>Regions</b> - <span class="<%= get_region_css_class(1) %>">E = East</span>,
@@ -18,7 +18,7 @@
 </div>
 <div class="clear"></div>
 
-<table class="draft_players_table_headers">
+<table class="preferred_players_table_headers">
   <tr>
     <th class="seed">Seed</th>
     <th class="name">Name</th>
@@ -29,9 +29,9 @@
     <th class="action"></th>
   </tr>
 </table>
-<table id="draft_players_table">
+<table id="preferred_players_table">
   <tbody>
-    <% @ncaa_players.each_with_index do |ncaa_player, index| %>
+    <% @preferred_players.each_with_index do |ncaa_player, index| %>
       <tr id="<%= ncaa_player.id %>" class="<%= (index + 1) %2 == 0 ? 'even' : 'odd'%>">
         <td class="seed"><%= ncaa_player.ncaa_team.bracket_entry.seed %></td>
         <td class="name"><%= ncaa_player.full_name %></td>
@@ -41,7 +41,7 @@
         <td class="region"><span class="<%= get_region_css_class ncaa_player.ncaa_team.bracket_entry.region.id %>"><%= ncaa_player.ncaa_team.bracket_entry.region.location_abbr %></span></td>
         <% if controller.action_name == 'preferred_players' %>
             <td class="action">
-              <%= link_to 'Add', draft_add_preferred_player_url(:id => ncaa_player.id) %>
+              <%= link_to 'Remove', draft_remove_preferred_player_url(:id => ncaa_player.id) %>
             </td>
         <% else %>
             <td class="action">
