New Design (Orange)

--- a/app/assets/stylesheets/bracket.css.scss
+++ b/app/assets/stylesheets/bracket.css.scss
@@ -1,7 +1,7 @@
 #bracket_container {
     padding: 5%;
     img {
-        border: 10px solid #EEE;
+        border: 10px solid #DEDEDE;
     }
 }
 
