--- a/app/assets/stylesheets/ncaa_players.css.scss
+++ b/app/assets/stylesheets/ncaa_players.css.scss
@@ -1,36 +1,24 @@
-#ncaa_players_container {
-    padding: 5px;
-}
-
-div.players_list {
-    max-height: 400px;
-    height: auto;
-    overflow: auto;
-    width: 450px;
-}
-
-.players_table_headers {
-    width: 450px;
-    border: 0px solid #000;
-    color: #fff;
-    background-color: #2E4764;
-    th {
-        /*	width: ;*/
-    }
-}
-
 .players_table {
-    width: 450px;
-    background-color: #fff;
-    border: 0px solid;
-    td {
-        width: auto;
-        padding: 2px 2px 2px 2px;
-        text-align: center;
-        &.name {
-            width: 130px;
-            text-align: left;
+    display: block;
+    width: 100%;
+    thead, tbody {
+        display: table;
+        width: 100%;
+    }
+    thead{
+        border-top: 1px solid #E5E5E5;
+        border-bottom: 1px solid #E5E5E5;
+        background-color: #F9F9F9;
+        th {
+            padding: 10px 0;
+            text-transform: uppercase;
+            font-size: 10px;
+            font-weight: normal;
         }
+    }
+    td {
+        padding: 10px 5px;
+        text-align: center;
     }
 }
 
