--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,10 +3,13 @@
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <p><%= f.label :email %><br />
-  <%= f.text_field :email %></p>
+  <div class="login_field clear">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
 
-  <p><%= f.submit "Send me reset password instructions" %></p>
+  <%= f.submit "Send me reset password instructions", :class => "btn" %>
+
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
