--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,20 +1,24 @@
-<div class="left_container">
-	<h2>Sign up</h2>
+<h2>Sign up</h2>
 
-	<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-	  <%= devise_error_messages! %>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
 
-	  <p><%= f.label :email %><br />
-	  <%= f.text_field :email %></p>
+  <div class="login_field clear">
+    <%= f.label :email %>
+    <%= f.text_field :email %>
+  </div>
 
-	  <p><%= f.label :password %><br />
-	  <%= f.password_field :password %></p>
+  <div class="login_field clear">
+    <%= f.label :password %>
+    <%= f.password_field :password %>
+  </div>
 
-	  <p><%= f.label :password_confirmation %><br />
-	  <%= f.password_field :password_confirmation %></p>
+  <div class="login_field clear">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %>
+  </div>
 
-	  <p><%= f.submit "Sign up" %></p>
-	<% end %>
+  <%= f.submit "Sign up", :class => "btn" %>
+<% end %>
 
-	<%= render :partial => "devise/shared/links" %>
-</div>
+<%= render :partial => "devise/shared/links" %>
