--- a/app/views/shared/_mm_team_roster.html.erb
+++ b/app/views/shared/_mm_team_roster.html.erb
@@ -4,61 +4,51 @@
     <div class="clear"></div>
   </div>
   <div class="module_container">
-    <table cellspacing="0" cellpadding="0" border="0">
-      <tr>
-        <td>
-          <table class="my_team_table_headers">
-            <tr>
-              <th class="name">Name</th>
-              <th class="position">Position</th>
-              <th class="ppg">PPG.</th>
-              <th class="school">School</th>
-              <th class="seed">Seed</th>
-              <th class="region">Region</th>
-              <th class="points">Rd 1</th>
-              <th class="points">Rd 2</th>
-              <th class="points">Rd 3</th>
-              <th class="points">Rd 4</th>
-              <th class="points">Rd 5</th>
-              <th class="points">Rd 6</th>
-              <th clas="status">Status</th>
-            </tr>
-          </table>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <div class="my_team_list">
-            <table class="my_team_table">
-              <% @roster.each_with_index do |ncaa_player, index| %>
-                <tr class="<%= (index + 1) %2 == 0 ? 'even' : 'odd'%>">
-                  <td class="name"><%= ncaa_player.full_name %></td>
-                  <td class="position"><span class="<%=get_position_css_class ncaa_player.position %>"><%= ncaa_player.position %></span></td>
-                  <td class="ppg"><%= ncaa_player.ppg_avg %></td>
-                  <td class="school"><%= ncaa_player.ncaa_team.school %></td>
-                  <td class="seed"><%= ncaa_player.ncaa_team.bracket_entry.seed %></td>
-                  <td class="region">
-                    <span class="<%= get_region_css_class ncaa_player.ncaa_team.bracket_entry.region.id %>"><%= ncaa_player.ncaa_team.bracket_entry.region.location %></span>
-                  </td>
-                  <td class="points"><%= !ncaa_player.player_scorings[0].nil? ? ncaa_player.player_scorings[0].points : '' %></td>
-                  <td class="points"><%= !ncaa_player.player_scorings[1].nil? ? ncaa_player.player_scorings[1].points : '' %></td>
-                  <td class="points"><%= !ncaa_player.player_scorings[2].nil? ? ncaa_player.player_scorings[2].points : '' %></td>
-                  <td class="points"><%= !ncaa_player.player_scorings[3].nil? ? ncaa_player.player_scorings[3].points : '' %></td>
-                  <td class="points"><%= !ncaa_player.player_scorings[4].nil? ? ncaa_player.player_scorings[4].points : '' %></td>
-                  <td class="points"><%= !ncaa_player.player_scorings[5].nil? ? ncaa_player.player_scorings[5].points : '' %></td>
-                  <td>
-                    <% if ncaa_player.ncaa_team.is_active == 1 %>
-                      <span>Active</span>
-                    <% else %>
-                      <span style="color: red;">Inactive</span>
-                    <% end %>
-                  </td>
-                </tr>
+    <table class="my_team_table">
+      <thead>
+        <tr>
+          <th rowspan="2" class="name">Name</th>
+          <th rowspan="2" class="position">Position</th>
+          <th rowspan="2" class="ppg">PPG.</th>
+          <th rowspan="2" class="school">School</th>
+          <th rowspan="2" class="seed">Seed</th>
+          <th rowspan="2" class="region">Region</th>
+          <th colspan="6" class="no_border">Round</th>
+          <th rowspan="2" class="status">Status</th>
+        </tr>
+        <tr>
+          <% (1..6).each do |index| %>
+            <th class="points"><%= index %></th>
+          <% end %>
+        </tr>
+      </thead>
+      <tbody>
+        <% @roster.each_with_index do |ncaa_player, index| %>
+          <tr class="<%= (index + 1) %2 == 0 ? 'even' : 'odd'%>">
+            <td class="name"><%= ncaa_player.full_name %></td>
+            <td class="position"><span class="<%=get_position_css_class ncaa_player.position %>"><%= ncaa_player.position %></span></td>
+            <td class="ppg"><%= ncaa_player.ppg_avg %></td>
+            <td class="school"><%= ncaa_player.ncaa_team.school %></td>
+            <td class="seed"><%= ncaa_player.ncaa_team.bracket_entry.seed %></td>
+            <td class="region">
+              <span class="<%= get_region_css_class ncaa_player.ncaa_team.bracket_entry.region.id %>"><%= ncaa_player.ncaa_team.bracket_entry.region.location %></span>
+            </td>
+            <td class="points"><%= !ncaa_player.player_scorings[0].nil? ? ncaa_player.player_scorings[0].points : '' %></td>
+            <td class="points"><%= !ncaa_player.player_scorings[1].nil? ? ncaa_player.player_scorings[1].points : '' %></td>
+            <td class="points"><%= !ncaa_player.player_scorings[2].nil? ? ncaa_player.player_scorings[2].points : '' %></td>
+            <td class="points"><%= !ncaa_player.player_scorings[3].nil? ? ncaa_player.player_scorings[3].points : '' %></td>
+            <td class="points"><%= !ncaa_player.player_scorings[4].nil? ? ncaa_player.player_scorings[4].points : '' %></td>
+            <td class="points"><%= !ncaa_player.player_scorings[5].nil? ? ncaa_player.player_scorings[5].points : '' %></td>
+            <td>
+              <% if ncaa_player.ncaa_team.is_active == 1 %>
+                <span>Active</span>
+              <% else %>
+                <span style="color: red;">Inactive</span>
               <% end %>
-            </table>
-          </div>
-        </td>
-      </tr>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
     </table>
   </div>
 </div>
