--- a/app/views/shared/_ncaa_teams.html.erb
+++ b/app/views/shared/_ncaa_teams.html.erb
@@ -1,41 +1,27 @@
-
-<div class="module">
-	<div class="module_header">NCAA Teams</div>
-	<div style="margin: 5px;">
-		<div style="float: right; padding-bottom: 5px;">
-			<%= link_to 'New Team', new_ncaa_team_path %>
-		</div>
-		<div class="clear"></div>
-		<table cellspacing="0" cellpadding="0" border="0">
-		  	<tr>
-		    	<td>
-		       		<table class="teams_table_headers">
-		         		<tr>
-					    	<th>School</th>
-							<th>Nickname</th>
-							<th>Action</th>
-		         		</tr>
-		       		</table>
-		    	</td>
-		  	</tr>
-		  	<tr>
-				<td>
-					<div class="teams_list">
-					<table class="teams_table">
-						<% @ncaa_teams.each do |ncaa_team| %>
-						  <tr>
-							<td><%= ncaa_team.school %></td>
-							<td><%= ncaa_team.nickname %></td>
-						    <td>
-						    	<%= link_to 'Edit', edit_ncaa_team_path(ncaa_team) %>
-						    	<%= link_to 'Remove', ncaa_team, :confirm => 'Are you sure?', :method => :delete %>
-							</td>
-						  </tr>
-						<% end %>
-					</table>
-					</div>
-				</td>
-			<tr>
-		</table>
-	</div>
+<div id="standings_container_header">NCAA Teams</div>
+<div style="float: right; padding-bottom: 5px;">
+  <%= link_to 'New Team', new_ncaa_team_path %>
 </div>
+<div class="clear"></div>
+
+<table class="teams_table">
+  <thead>
+    <tr>
+      <th>School</th>
+      <th>Nickname</th>
+      <th>Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @ncaa_teams.each_with_index do |ncaa_team, index| %>
+      <tr class="<%= index.odd? ? 'odd' : 'even' %>">
+        <td><%= ncaa_team.school %></td>
+        <td><%= ncaa_team.nickname %></td>
+        <td>
+          <%= link_to 'Edit', edit_ncaa_team_path(ncaa_team) %>
+          <%= link_to 'Remove', ncaa_team, :confirm => 'Are you sure?', :method => :delete %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
