--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -151,7 +151,7 @@ textarea {
 #nav_container {
     display: block;
     width: 15%;
-    background: asset-url("bg_menu_orange.png", image) 0 0 repeat;
+    background: asset-url("bg_menu_orange_dark.png", image) 0 0 repeat;
     border-right: 1px solid #d56d0d;
     float: left;
     height: 100%;
@@ -226,13 +226,13 @@ textarea {
     padding: 2px 10px 3px 10px;
     p {
         font-size: 14px;
-        color: #7b3b00;
-        text-shadow: 0 1px #e48822;
+        color: #662206;
+        text-shadow: 0 1px #ff6e33;
     }
     a {
         font-size: 10px;
-        color: #7b3b00;
-        text-shadow: 0 1px #e48822;
+        color: #662206;
+        text-shadow: 0 1px #ff6e33;
         text-decoration: underline;
         &:hover {
             text-decoration: none;
