--- a/app/views/shared/_draft_player_list.html.erb
+++ b/app/views/shared/_draft_player_list.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
     Filter players allowed to be drafted for:
     <%= select(:player, :selected_round, options_for_select([['Round 1 & 2', 1], ['Round 3', 3], ['Round 4', 4], ['Round 5', 5], ['Round 6', 6]], @selected_round), {}, html_options = {:onchange => "getEligiblePlayersByRound('#{@mm_team.id}')"})  %>
-  <% if controller.action_name != 'preferred_players' %>
-    <%= link_to 'Show Preferred Players', '#', :onclick => "$('#draft_players_container').hide(); $('#preferred_players_container').show();" %>
+  <% if controller.controller_name == 'draft' %>
+    <%= link_to 'Show Preferred Players', '#', :onclick => "showPreferredPlayers()" %>
   <% end %>
 </div>
 
