--- a/app/views/shared/_preferred_player_list.html.erb
+++ b/app/views/shared/_preferred_player_list.html.erb
@@ -2,8 +2,8 @@
   Filter players allowed to be drafted for:
   <%= select(:preferred_player, :selected_round, options_for_select([['Round 1 & 2', 1], ['Round 3', 3], ['Round 4', 4], ['Round 5', 5], ['Round 6', 6]],
                                                                     @selected_round), {}, html_options = {:onchange => "getPreferredPlayersByRound(#{@mm_team.id})"})  %>
-  <% if controller.action_name != 'preferred_players' %>
-    <%= link_to 'Show All Players', '#', :onclick => "$('#preferred_players_container').hide(); $('#draft_players_container').show();" %>
+  <% if controller.controller_name == 'draft' %>
+    <%= link_to 'Show All Players', '#', :onclick => "showEligiblePlayers()" %>
   <% end %>
 </div>
 
