--- a/app/views/shared/_preferred_player_list.html.erb
+++ b/app/views/shared/_preferred_player_list.html.erb
@@ -11,11 +11,9 @@
 
 <div id="preferred_players_container_header">My Preferred Players</div>
 
-<div class="left_container">
+<div class="regions_container">
   <b>Regions</b> - <span class="<%= get_region_css_class(1) %>">E = East</span>,
   <span class="<%= get_region_css_class(2) %>">SE = South East</span>,
-</div>
-<div class="left_container">
   <span class="<%= get_region_css_class(3) %>">SW = South West</span>,
   <span class="<%= get_region_css_class(4) %>">W = West</span>
 </div>
