--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -197,7 +197,6 @@ textarea {
         background: asset-url("bball_texture.jpg", image) 0 0 repeat;
         border-top: 2px solid #000;
         border-bottom: 2px solid #000;
-        border-right: 1px solid #000;
         display: block;
         color: #FFF;
     }
@@ -308,8 +307,12 @@ textarea {
 .left_container, .right_container {
     float: left;
     margin: 0px;
-    padding: 2% 3%;
+    padding: 1% 3%;
     width: 44%;
+}
+
+.left_container {
+    background: #eee;
 }
 
 .right_container {
