--- a/app/assets/stylesheets/mm.css.scss
+++ b/app/assets/stylesheets/mm.css.scss
@@ -233,13 +233,13 @@ textarea {
     margin-top: 6px;
     padding: 2px 10px 3px 10px;
     p {
-        font-size: 14px;
+        font-size: 12px;
         color: #FFF;
         text-shadow: 0 2px #000;
     }
     a {
-        font-size: 10px;
-        color: #000;
+        font-size: 11px;
+        color: #3E00FF;
         text-decoration: underline;
         &:hover {
             text-decoration: none;
