--- a/app/views/shared/_draft_player_list.html.erb
+++ b/app/views/shared/_draft_player_list.html.erb
@@ -41,7 +41,7 @@
         <td class="region"><span class="<%= get_region_css_class ncaa_player.ncaa_team.bracket_entry.region.id %>"><%= ncaa_player.ncaa_team.bracket_entry.region.location_abbr %></span></td>
         <% if controller.controller_name == 'mm_teams' %>
             <td class="action">
-              <%= link_to 'Add', '#', :onclick => "addPreferredPlayer('#{ncaa_player.id}', '#{get_current_user.id}')" %>
+              <%= link_to 'Add', '#', :onclick => "addPreferredPlayer('#{ncaa_player.id}', '#{get_team_for_current_user.id}')" %>
             </td>
         <% else %>
             <td class="action">
