--- a/app/views/draft/_draft_status.html.erb
+++ b/app/views/draft/_draft_status.html.erb
@@ -1,14 +1,29 @@
 
-<div class="label">Current Round: </div> <div id="current_round"><%= @draft.current_draft_pick.round %></div>
-<div class="label">Current Overall Pick: </div> <div id="current_pick"><%= @draft.current_draft_pick.overall_pick <= 120 ? @draft.current_draft_pick.overall_pick : 'NONE' %></div>
-<br/>
-<span style="display: none;" id="last_player_drafted_id"><%= @draft.last_player_drafted.nil? ? '' : @draft.last_player_drafted.ncaa_player.id %></span>
-<div class="label">Last Player Drafted:</div> <div id="player_drafted"><%= @draft.last_player_drafted.nil? ? 'TBD' : @draft.last_player_drafted.ncaa_player.full_name + ', ' + @draft.last_player_drafted.ncaa_player.position + ', ' + @draft.last_player_drafted.ncaa_player.ncaa_team.school %></div>
-<br/>
-<div class="label">Drafted Position Totals: </div>
-<% @draft.position_counts.each_with_index do |pick, index| %>
-  <div class="label"><span class="<%=  get_position_css_class pick.position %>"><%= pick.position %></span> -</div><div><%= pick.total %></div>
+<div>
+    <div class="label">Current Round: </div> <div id="current_round"><%= @draft.current_draft_pick.round %></div>
+    <div class="label">Current Overall Pick: </div> <div id="current_pick"><%= @draft.current_draft_pick.overall_pick <= 120 ? @draft.current_draft_pick.overall_pick : 'NONE' %></div>
+</div>
+<% if !session[:mm_team_id].nil? %>
+    <div style="margin-left: 20px;">
+        <%= link_to 'My Team', "#", :data => { :team => get_team_for_current_user.id }, :id => "my_team" %> |
+        <%= link_to 'Manage Preferred Players', preferred_players_mm_team_url(get_team_for_current_user) %>
+    </div>
 <% end %>
+<br/>
+<div>
+    <span style="display: none;" id="last_player_drafted_id"><%= @draft.last_player_drafted.nil? ? '' : @draft.last_player_drafted.ncaa_player.id %></span>
+    <div class="label">Last Player Drafted:</div> <div id="player_drafted"><%= @draft.last_player_drafted.nil? ? 'TBD' : @draft.last_player_drafted.ncaa_player.full_name +
+        ', ' + @draft.last_player_drafted.ncaa_player.position + ', ' + @draft.last_player_drafted.ncaa_player.ncaa_team.school %></div>
+</div>
+<br/>
+<div>
+    <div class="label">Drafted Position Totals: </div>
+    <% @draft.position_counts.each_with_index do |pick, index| %>
+        <div class="label"><span class="<%=  get_position_css_class pick.position %>"><%= pick.position %></span> -</div><div><%= pick.total %></div>
+    <% end %>
+</div>
+
+
 
 
 
