--- a/app/views/draft/index.html.erb
+++ b/app/views/draft/index.html.erb
@@ -1,15 +1,14 @@
 <div id="draft_page_container">
     <div class="left_container">
-      <%= link_to 'My Preferred Players', preferred_players_mm_team_url(get_team_for_current_user) %>
       <div id="draft_status_container">
         <%= render "draft_status" %>
       </div>
         <div id="mm_team_draft_picks">
-          <ul style="list-style-type: none;">
-            <li style="float: left; padding: 5px;"><div class="label">My Draft Picks</div></li>
+          <div class="label">My Draft Picks:</div>
+          <ul>
             <% @my_draft_picks.each do |dp| %>
-                <li style="float: left; padding: 5px;">
-                  <div>Rd <%= dp.round %></div><hr/><div>Pick <%= @draft.total_teams - ((@draft.total_teams * dp.round) - dp.overall_pick) %></div>
+                <li>
+                  <div class="label">Rd <%= dp.round %>:</div><div>Pick <%= @draft.total_teams - ((@draft.total_teams * dp.round) - dp.overall_pick) %></div>
                 </li>
             <% end %>
           </ul>
@@ -26,9 +25,6 @@
     </div>
 
     <div class="right_container">
-        <% if !session[:mm_team_id].nil? %>
-            <%= link_to 'My Team', "#", :data => { :team => get_team_for_current_user }, :id => "my_team" %>
-        <% end %>
       <div id="draft_players_container">
         <%= render "shared/draft_player_list" %>
       </div>
