--- a/app/views/mm_teams/add_preferred_player.js.erb
+++ b/app/views/mm_teams/add_preferred_player.js.erb
@@ -7,8 +7,21 @@ if (flashAlert){
     setTimeout(function(){
         $('#flash').fadeOut('slow');
     }, 5000);
-    
-    $("#flash").html('<div class="flash_alert message"><a onclick="javascript:void(0);" class="hideText icon_close">Close</a><span><%=flash[:alert]%></span></div>');
+
+    $("#flash").html("<div class='flash_alert message'><a onclick='javascript:void(0);' class='hideText icon_close'>Close</a><span>" + flashAlert + "</span></div>");
     $("#flash").show();
+    <%=flash[:alert] = nil%>
+}
+
+var flashNotice = "<%=flash[:notice]%>";
+if (flashNotice){
+    $('#flash').fadeIn('slow');
+    setTimeout(function(){
+        $('#flash').fadeOut('slow');
+    }, 5000);
+
+    $("#flash").html("<div class='flash_notice message'><a onclick='javascript:void(0);' class='hideText icon_close''>Close</a><span>" + flashNotice + "</span></div>");
+    $("#flash").show();
+    <%=flash[:notice] = nil%>
 }
 
